@@ -1,4 +1,6 @@
 ---
+* [TALOS-CAN-0064] signed/unsiged clash could lead to buffer overun
+  and memory corruption. perlinger@ntp.org
 * [Bug 2332] (reopened) Exercise thread cancellation once before dropping
   privileges and limiting resources in NTPD removes the need to link
   forcefully against 'libgcc_s' which does not always work. J.Perlinger
